fix bug: user avatar shrink on small width screen

--- a/src/components/user-info/user-info.module.scss
+++ b/src/components/user-info/user-info.module.scss
@@ -15,6 +15,7 @@
   &__image {
     width: 46px;
     height: 46px;
+    flex-shrink: 0;
     border-radius: 50%;
   }
 }
